--- a/examples/foo/makefile
+++ b/examples/foo/makefile
@@ -28,7 +28,6 @@ endif
 UNITY_ROOT=../..
 
 CFLAGS=-std=c99
-#CFLAGS=-std=c89
 CFLAGS += -Wall
 CFLAGS += -Wextra
 CFLAGS += -Wpointer-arith
@@ -43,32 +42,26 @@ CFLAGS += -Wstrict-prototypes
 CFLAGS += -Wundef
 CFLAGS += -Wold-style-definition
 
-TARGET_BASE1=test_foo
-#TARGET_BASE2=test2
+TARGET_BASE1=all_tests
 TARGET1 = $(TARGET_BASE1)$(TARGET_EXTENSION)
-#TARGET2 = $(TARGET_BASE2)$(TARGET_EXTENSION)
-SRC_FILES1=$(UNITY_ROOT)/src/unity.c $(UNITY_ROOT)/extras/fixture/src/unity_fixture.c src/foo.c  test/TestFoo.c  test/test_runners/TestFoo_Runner.c
-#SRC_FILES2=$(UNITY_ROOT)/src/unity.c src/ProductionCode2.c test/TestProductionCode2.c test/test_runners/TestProductionCode2_Runner.c
+SRC_FILES1=\
+  $(UNITY_ROOT)/src/unity.c \
+  $(UNITY_ROOT)/extras/fixture/src/unity_fixture.c \
+  src/foo.c \
+  test/TestFoo.c \
+  test/test_runners/TestFoo_Runner.c \
+  test/test_runners/all_tests.c
 INC_DIRS=-Isrc -I$(UNITY_ROOT)/src -I$(UNITY_ROOT)/extras/fixture/src
 SYMBOLS=
 
 all: clean default
 
-#default: $(SRC_FILES1) $(SRC_FILES2)
-default: $(SRC_FILES1)
+default:
 	$(C_COMPILER) $(CFLAGS) $(INC_DIRS) $(SYMBOLS) $(SRC_FILES1) -o $(TARGET1)
-#	$(C_COMPILER) $(CFLAGS) $(INC_DIRS) $(SYMBOLS) $(SRC_FILES2) -o $(TARGET2)
-	- ./$(TARGET1)
-#	./$(TARGET2)
-
-test/test_runners/TestFoo_Runner.c: test/TestFoo.c
-	ruby $(UNITY_ROOT)/auto/generate_test_runner.rb test/TestFoo.c  test/test_runners/TestFoo_Runner.c
-#test/test_runners/TestProductionCode2_Runner.c: test/TestProductionCode2.c
-#	ruby $(UNITY_ROOT)/auto/generate_test_runner.rb test/TestProductionCode2.c test/test_runners/TestProductionCode2_Runner.c
+	- ./$(TARGET1) -v
 
 clean:
 	$(CLEANUP) $(TARGET1)
-#	$(CLEANUP) $(TARGET1) $(TARGET2)
 
 ci: CFLAGS += -Werror
 ci: default
